--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM tomcat:7-jdk8-openjdk
 //ADD /target/sysfoo.war /usr/local/tomcat/webapps/
-EXPOSE 8080
-CMD ["catalina.sh", "run"]
+//EXPOSE 8080
+//CMD ["catalina.sh", "run"]
