--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM tomcat:7-jdk8-openjdk
-//ADD /target/sysfoo.war /usr/local/tomcat/webapps/
-//EXPOSE 8080
-//CMD ["catalina.sh", "run"]
+#ADD /target/sysfoo.war /usr/local/tomcat/webapps/
+#EXPOSE 8080
+#CMD ["catalina.sh", "run"]
+CMD ["sleep 100"]
