--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,4 +2,4 @@ FROM tomcat:7-jdk8-openjdk
 #ADD /target/sysfoo.war /usr/local/tomcat/webapps/
 #EXPOSE 8080
 #CMD ["catalina.sh", "run"]
-CMD ["sleep 100"]
+#CMD ["sleep 100"]
